force-app/main/default/objects/NEO_Aggregation__c/NEO_Aggregation__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Aggregation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>NEO Aggregation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>