force-app/main/default/objects/NEO_Aggregation__c/fields/Aggregation_Name__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Name__c</fullName>
    <label>Aggregation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>