force-app/main/default/objects/NEO_Aggregation__c/fields/Fields_To_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Aggregate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fields To Aggregate</label>
    <referenceTo>NEO_Variable__c</referenceTo>
    <relationshipLabel>NEO Aggregations (Fields To Aggregate)</relationshipLabel>
    <relationshipName>NEO_Aggregations2</relationshipName>
    <type>Lookup</type>
</CustomField>