force-app/main/default/objects/NEO_Aggregation__c/fields/Fields_To_Group__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Group__c</fullName>
    <label>Fields To Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>