force-app/main/default/objects/NEO_Aggregation__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Object</label>
    <referenceTo>NEO_Variable__c</referenceTo>
    <relationshipLabel>NEO Aggregations</relationshipLabel>
    <relationshipName>NEO_Aggregations</relationshipName>
    <type>Lookup</type>
</CustomField>