force-app/main/default/objects/NEO_Aggregation__c/fields/Master_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Label__c</fullName>
    <formula>Master_Object__r.Variable_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Object Label</label>
    <type>Text</type>
</CustomField>