force-app/main/default/objects/NEO_Aggregation__c/fields/NEO_Summarized_All_Records__c.field-meta.xml
<CustomField>
    <fullName>NEO_Summarized_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summarized All Records</label>
    <type>Checkbox</type>
</CustomField>