force-app/main/default/objects/NEO_Aggregation__c/fields/NEO_Summarized_Object__c.field-meta.xml
<CustomField>
    <fullName>NEO_Summarized_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summarized Object</label>
    <referenceTo>NEO_Variable_Association__c</referenceTo>
    <relationshipLabel>NEO Aggregations</relationshipLabel>
    <relationshipName>NEO_Aggregations</relationshipName>
    <type>Lookup</type>
</CustomField>