force-app/main/default/objects/NEO_Aggregation__c/fields/Roll_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Type__c</fullName>
    <label>Roll-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>