force-app/main/default/objects/NEO_Aggregation__c/listViews/NEO_Speaker_Request.listView-meta.xml
<ListView>
    <fullName>NEO_Speaker_Request</fullName>
    <columns>NAME</columns>
    <columns>Aggregation_Name__c</columns>
    <columns>Master_Object_Label__c</columns>
    <columns>Roll_Up_Type__c</columns>
    <columns>Fields_To_Group__c</columns>
    <columns>Custom_Logic__c</columns>
    <columns>NEO_Summarized_All_Records__c</columns>
    <columns>Fields_To_Aggregate__c</columns>
    <columns>Active__c</columns>
    <columns>NEO_Summarized_Object__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Master_Object_Label__c</field>
        <operation>equals</operation>
        <value>Speaker Request</value>
    </filters>
    <label>Speaker Request</label>
    <language>en_US</language>
</ListView>